@startuml monitor_lock_sweeper
allowmixing
title Monitor lock sweeper — Vast / Modal / Community via per-key Redis locks

skinparam classFontSize 11
skinparam noteFontSize 10
skinparam classBackgroundColor<<NEW>> #DCFCE7
skinparam classBackgroundColor<<CHANGED>> #FEF3C7
skinparam classBackgroundColor<<DELETED>> #FEE2E2
skinparam classBackgroundColor<<EXISTING>> #E5E7EB

' =====================================================================
' New: lock primitive + sweeper
' =====================================================================

class MonitorLockRepository <<NEW>> {
  + try_acquire(key, instance_id) : bool
  + refresh(key, instance_id) : bool
  + release(key, instance_id) : void
  - _LOCK_TTL_SEC : int = 60
  - _REFRESH_LUA : str
}
note right of MonitorLockRepository
  **NEW**.  Single-purpose wrapper around the
  Redis lock primitive used by all three monitor
  flows.

  ``try_acquire``  — SET key {instance_id} NX EX 60.
                      Returns True if won.
  ``refresh``      — Lua: GET key == instance_id then
                      EXPIRE key 60.  Returns False if
                      another instance owns it now (or
                      key is gone).  Caller self-terminates.
  ``release``      — Lua: GET key == instance_id then
                      DEL key.  Best-effort; lock would
                      expire on its own anyway.

  Lua refresh + release is the only correct shape:
  plain EXPIRE / DEL would clobber another instance's
  lock if Redis hiccupped and ownership shifted.
end note

class MonitorLockSweeper <<NEW>> {
  + start() : void
  + stop() : void
  - _tick() : void
  - _sweep_per_job(fleet) : void
  - _sweep_community() : void
  - _interval_sec : int = 30
  - _instance_id : str
}
note right of MonitorLockSweeper
  **NEW**.  Single thread per instance, no
  leader gating.  Started at boot on every
  Cloud Run instance.

  **Per tick** (every 30s):
   1. SELECT id FROM jobs WHERE
        status='running' AND
        machine_type IN ('vast_serverless',
                         'modal_serverless')
   2. For each row, try_acquire
        ``monitor:job:{job_id}``.
        Win → call the corresponding callback
        handler's ``start_monitoring(...)``
        which spawns the per-job thread on
        THIS instance.
        Lose → another instance owns it. Skip.
   3. try_acquire ``monitor:community``.
        Win → call ``CommunityMonitor.try_start()``.
        Lose → skip.

  Stateless across runs.  All authoritative state
  lives in the DB row + Redis lock.
end note

MonitorLockSweeper --> MonitorLockRepository : try_acquire

' =====================================================================
' Existing classes that are CHANGED
' =====================================================================

class VastCallbackHandler <<CHANGED>> {
  + start_monitoring(...) : void
  + stop_monitoring(job_id) : void
  - _monitors : dict
}
note right of VastCallbackHandler
  **CHANGED**: ``start_monitoring`` first
  calls ``MonitorLockRepository.try_acquire(
    f"monitor:job:{job_id}", instance_id)``.
  Spawns the thread only on win.

  Two callers now:
   1. ``VastFleetStrategy.dispatch`` (at dispatch
      time, on the dispatching instance).
   2. ``MonitorLockSweeper._sweep_per_job``
      (at sweep time, on whichever instance's
      tick fires first for an unowned job).

  Both go through the same lock acquire — at
  most one wins per ``job_id``.

  Local ``_monitors`` dict still de-dups within
  a single instance; the Redis lock is the
  cross-instance dedup.
end note

class ModalCallbackHandler <<CHANGED>> {
  + start_monitoring(...) : void
  + stop_monitoring(job_id) : void
  - _monitors : dict
}
note right of ModalCallbackHandler
  **CHANGED**: same as VastCallbackHandler.
  Same Redis key shape (``monitor:job:{job_id}``)
  -- job_ids are globally unique, so a single
  key namespace is fine.
end note

class CommunityMonitor <<CHANGED>> {
  + try_start() : bool
  + stop() : void
  - _loop() : void
  - _tick() : void
}
note right of CommunityMonitor
  **CHANGED**:
   * New ``try_start()`` returns True iff
     ``MonitorLockRepository.try_acquire(
       "monitor:community", instance_id)``
     succeeds; spawns the thread on win.
     If a sweeper later finds the lock free
     (this instance died), another instance's
     sweeper calls ``try_start()`` and gets
     the win.
   * On every tick (~10s) the loop calls
     ``MonitorLockRepository.refresh(...)``;
     if it returns False the loop exits
     (lost ownership; another instance has
     taken over via the sweeper).
end note

class VastInstanceMonitor <<CHANGED>> {
  + run() : void
  - _tick() : bool
}
note right of VastInstanceMonitor
  **CHANGED**: every tick (~30s) calls
  ``MonitorLockRepository.refresh(
    f"monitor:job:{job_id}", instance_id)``.
  If False → another instance has taken over
  (Redis hiccup let our lock expire); exit
  cleanly without firing terminal actions.
end note

class ModalJobMonitor <<CHANGED>> {
  + run() : void
  - _tick() : bool
}
note right of ModalJobMonitor
  **CHANGED**: same refresh-or-exit pattern as
  VastInstanceMonitor.
end note

VastFleetStrategy ..> VastCallbackHandler : start_monitoring (dispatch path)
ModalFleetStrategy ..> ModalCallbackHandler : start_monitoring (dispatch path)

VastCallbackHandler --> MonitorLockRepository : try_acquire (lock per job)
ModalCallbackHandler --> MonitorLockRepository : try_acquire (lock per job)
CommunityMonitor --> MonitorLockRepository : try_acquire (singleton lock) +\nrefresh (per tick)
VastInstanceMonitor --> MonitorLockRepository : refresh (per tick)
ModalJobMonitor --> MonitorLockRepository : refresh (per tick)

MonitorLockSweeper ..> VastCallbackHandler : start_monitoring
MonitorLockSweeper ..> ModalCallbackHandler : start_monitoring
MonitorLockSweeper ..> CommunityMonitor : try_start

' =====================================================================
' Existing fleet-strategy classes referenced (unchanged)
' =====================================================================

class VastFleetStrategy <<EXISTING>> {
  + dispatch(task, ctx, job_id)
}

class ModalFleetStrategy <<EXISTING>> {
  + dispatch(task, ctx, job_id)
}

' =====================================================================
' Boot wiring
' =====================================================================

class "main.py (FastAPI startup hook)" as main_py <<CHANGED>>
note right of main_py
  **CHANGED** (lines 71-77):

  Today:
    if try_acquire_leader_lock():
        _run_recovery(_container)
        _drain_queues_after_recovery(_container)
        _container.community_monitor.start()

  After:
    _container.community_monitor.try_start()
    _container.monitor_lock_sweeper.start()
    _drain_queues_after_recovery(_container)

  Leader election goes away entirely (advisory-lock
  helper + the if/else branch + the leader-only
  daemon startup path).  Every instance runs the
  same boot sequence.

  ``community_monitor.try_start()`` is the fast
  path -- on the first booted instance it gets
  the lock and starts immediately, before the
  sweeper's first tick lands.

  ``MonitorLockSweeper`` covers everything from
  there on: claims orphans (community, vast jobs,
  modal jobs) within sweep_interval + lock_TTL
  worst case after the previous owner died.
end note

main_py ..> CommunityMonitor : try_start
main_py ..> MonitorLockSweeper : start

' =====================================================================
' DELETIONS
' =====================================================================

class VastRecovery <<DELETED>> {
  recover() — DELETED
}
note right of VastRecovery
  **DELETED**.  Existed to scan for
  ``status='running'`` Vast jobs at leader
  boot and re-spawn monitors.  Sweeper
  now does the same thing every 30s on
  every instance — strictly stronger.
end note

class ModalRecovery <<DELETED>> {
  recover() — DELETED
}
note right of ModalRecovery
  **DELETED**.  Same reason as VastRecovery.
end note

class "try_acquire_leader_lock()\n(serverV2/infrastructure/db.py)" as try_acquire_leader_lock <<DELETED>>
note right of try_acquire_leader_lock
  **DELETED** (along with _LEADER_LOCK_KEY,
  _leader_conn).  No remaining callers after
  CommunityMonitor stops being leader-only
  and the recovery classes go away.
end note

' =====================================================================
' Bootstrap / Container additions
' =====================================================================

class "Container (bootstrap.py)" as Bootstrap_Container <<CHANGED>>
note right of Bootstrap_Container
  **CHANGED**: drops ``vast_recovery`` and
  ``modal_recovery`` fields.  Adds:
   * ``monitor_lock_repo: MonitorLockRepository``
   * ``monitor_lock_sweeper: MonitorLockSweeper``

  Sweeper constructor takes ``job_repo``,
  ``monitor_lock_repo``, ``vast_callback``,
  ``modal_callback``, ``community_monitor``.
  No leader-only injection.
end note

' =====================================================================
' Lua refresh contract — quick reference
' =====================================================================

note as N1 #FFF7ED
  **Lua refresh script** (one-liner equivalent):

  if redis.call("GET", KEYS[1]) == ARGV[1] then
      return redis.call("EXPIRE", KEYS[1], ARGV[2])
  else
      return 0
  end

  Returns 1 if extended, 0 if lost ownership.
  Atomic via Redis EVAL (no separate watch/multi
  needed).

  **Sweep latency bounds**:
   * Best:   sweep_interval (~30s) after lock TTL expires
   * Worst:  sweep_interval + lock_TTL (~90s)
   * Backup_monitor catches anything still orphaned
     after that via the heartbeat-stale path.
end note

@enduml
